tests/NormalTests/paczka1/fuzzy1/15421100.err
Error in line 15: IEd4ltxk S408 93,5
Error in line 22: yjXeHxtL8 S408 12,6
Error in line 24: yjXeHxtL8 A504 23,4
Error in line 25: yjXeHxtL8 S171 51,2
Error in line 14: S408 A862 427,7
Error in line 35: jhc S171 -4,5
Error in line 27: yjXeHxtL8 S408 56,9
